fixing overflow style with mobile mode

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
-body {
+html, body {
     background-color: #eee;
+    overflow: hidden;
 }
